[package]
name = "quadprog"
version = "0.1.0"
authors = ["Ashkan Kiani <from-crates.quadprog@kiani.io>"]
edition = "2018"
description = "Port of QuadProg++ by Luca Di Gaspero"
license = "MIT"
repository = "https://github.com/norcalli/quadprog"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.14.0"
anyhow = "1.0.41"
ndarray-linalg = { version = "0.13", features = ["openblas"] }

[dev-dependencies]
approx = "0.5.0"
